fix: update heading color for improved readability and consistency

--- a/packages/core/src/styles/heading.module.scss
+++ b/packages/core/src/styles/heading.module.scss
@@ -1,5 +1,5 @@
 .heading {
-  color: var(--color, #3e434b);
+  color: var(--color, #555b67);
 
   &::selection {
     color: #cccfd5;
